--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>vue3-organization-chart</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+<!-- Icons. Uncomment required icon fonts -->
+<link rel="stylesheet" href="/assets/vendor/fonts/boxicons.css" />
+
+<!-- Core CSS -->
+<link rel="stylesheet" href="./assets/vendor/css/core.css" class="template-customizer-core-css" />
+<link rel="stylesheet" href="./assets/vendor/css/theme-default.css" class="template-customizer-theme-css" />
+<link rel="stylesheet" href="./assets/css/demo.css" />
+
+<!-- Vendors CSS -->
+<link rel="stylesheet" href="./assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
+
+<link rel="stylesheet" href="./assets/vendor/libs/apex-charts/apex-charts.css" />
+
+<!-- Page CSS -->
+<!-- Helpers -->
+<script src="/assets/vendor/js/helpers.js"></script>
   </head>
   <body>
     <div id="app"></div>
+<!-- Core JS -->
+  <!-- build:js assets/vendor/js/core.js -->
+  <script src="/assets/vendor/libs/jquery/jquery.js"></script>
+  <script src="/assets/vendor/libs/popper/popper.js"></script>
+  <script src="/assets/vendor/js/bootstrap.js"></script>
+  <script src="/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
+  <script src="/assets/vendor/js/menu.js"></script>
+  <!-- endbuild -->
 
+  <!-- Main JS -->
+  <script src="/assets/js/main.js"></script>
   </body>
 </html>
